# sh

./: Cargo.toml  buf.yaml  exercise_1.md  exercise_2.md  exercise_3.md  exercise_4.md  exercise_5.md  exercise_6.md  readme.md
.cargo/: config.toml
c_socket_lib/: Cargo.toml
c_socket_lib/src/: lib.rs
c_socket_use_runtime/: Cargo.toml  build.rs
c_socket_use_runtime/src/: main.rs
c_socket_use_static/: Cargo.toml  build.rs
c_socket_use_static/src/: main.rs
grpc_api/: Cargo.toml  build.rs
grpc_api/src/: main.rs  repository.rs  store.rs
gui_client/: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html
gui_client/src/: lib.rs  wasm_grpc_client.rs
gui_client/ui/: add-device-popup.slint  add-home-popup.slint  add-room-popup.slint  app-window.slint  delete-home-popup.slint  error-box.slint  home-service.slint  my-icon-button.slint  my-text-button.slint
gui_client/ui/icons/: room.png:Zone.Identifier
proto/healthcheck/v1/: healthcheck.proto
sh_ex/: Cargo.toml
sh_ex/examples/: sh_ex_base.rs  sh_ex_builder.rs  sh_ex_online.rs  sh_ex_reporter.rs  sh_ex_subscribe.rs
sh_ex/src/: main.rs
sh_ex/tests/: smart_home_integration.rs
sh_lib/: Cargo.toml
sh_lib/src/: builder.rs  errors.rs  id.rs  lib.rs  reporter.rs  rich_console.rs  smart_home.rs  smart_room.rs  subscriber.rs
sh_socket_emulator/: .env.example  Cargo.toml
sh_socket_emulator/src/: main.rs
sh_therm_emulator/: .env.example  Cargo.toml
sh_therm_emulator/src/: main.rs
test_lib/: Cargo.toml
test_lib/src/: lib.rs
tests_grpc_api/: Cargo.toml  build.rs
tests_grpc_api/src/: lib.rs
(+11 files in other folders)
