[package]
name = "grpc_api"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.3"
sh_lib = { path = "../sh_lib" }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15.0"
tonic-web = "0.14.3"
tower-http = { version = "0.6.8", features = ["cors"] }
tower = "0.5.3"
http = "1.4.0"

[build-dependencies]
tonic-prost-build = "0.14.2"
walkdir = "2.5"
