[package]
name = "gui_client"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
slint = { version = "1.15.0" }
tokio = { version = "1.0", features = [
    "rt",
    "macros",
], default-features = false }
web-sys = { version = "0.3.85", features = [
    "console",
    "Window",
    "Request",
    "Response",
    "Headers",
    "RequestInit",
    "RequestMode",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

prost = "0.14.3"
tonic-web = "0.12.3"
tonic-web-wasm-client = "0.8"
tonic-prost = "0.14.3"
tonic = { version = "0.14.3", default-features = false, features = ["codegen"] }
chrono = "0.4.43"

[build-dependencies]
slint-build = "1.15.0"
tonic-prost-build = "0.14.3"
walkdir = "2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.4.1", features = ["wasm_js"] }
